--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
-  "name": "keymorph",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^2.2.0",
-    "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-os": "^2.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.83.4"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^2",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3"
-  }
+	"name": "keymorph",
+	"private": true,
+	"version": "0.1.0",
+	"type": "commonjs",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"tauri": "tauri"
+	},
+	"dependencies": {
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-select": "^2.1.5",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@tabler/icons-react": "^3.29.0",
+		"@tanstack/react-router": "^1.99.0",
+		"@tauri-apps/api": "^2.2.0",
+		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-os": "^2.2.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.1.0",
+		"lucide-react": "^0.474.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@tauri-apps/cli": "^2",
+		"@types/node": "^22.13.0",
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.6.2",
+		"vite": "^6.0.3"
+	}
 }
