--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,13 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": ["vite.config.ts"]
+	"compilerOptions": {
+		"strict": true,
+		"composite": true,
+		"skipLibCheck": true,
+		"module": "ESNext",
+		"moduleResolution": "bundler",
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
+		"types": ["node"]
+	},
+	"include": ["vite.config.ts"]
 }
