--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
 		"tailwindcss": "^3.4.17",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3"
-	}
+	},
+	"description": "This template should help get you started developing with Tauri, React and Typescript in Vite.",
+	"main": "postcss.config.js",
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
