--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,15 +19,15 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["unstable"] }
+tauri = { version = "2", features = [ "macos-private-api", "unstable"] }
 tauri-plugin-opener = "2"
 tauri-plugin-prevent-default = "1.0.2"
 tauri-plugin-theme = "2.1.0"
 tauri-plugin-os = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-key_director = { git = "https://github.com/kayzer184/KeyDirector" }
-# key_director = { path = "../../KeyDirector" }
+# key_director = { git = "https://github.com/kayzer184/KeyDirector" }
+key_director = { path = "../../KeyDirector" }
 once_cell = "1.18"
 
 [[bin]]
